// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card demo -- card 1`] = `
.emotion-18 {
  box-sizing: border-box;
  text-align: left;
  overflow: auto;
  background: #ffffff;
  font-size: 12px;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 4px 4px -2px rgba(0,0,0,0.05),inset 0 -2px 0px 0px #f8f8ff;
  border-radius: 4px;
}

.emotion-18 .uc-fe-card-header:last-of-type,
.emotion-18 .uc-fe-card-action:last-of-type,
.emotion-18 .uc-fe-card-content:last-of-type {
  margin-bottom: 24px;
}

.emotion-18 .uc-fe-card-header:nth-of-type(2),
.emotion-18 .uc-fe-card-action:nth-of-type(2),
.emotion-18 .uc-fe-card-content:nth-of-type(2) {
  margin-top: 24px;
}

.emotion-18 .uc-fe-card-title {
  color: #0a1633;
  font-size: 16px;
}

.emotion-18 .uc-fe-card-comment {
  color: #526075;
  font-size: 12px;
}

.emotion-18 .uc-fe-card-footer {
  border-top: 1px solid #d2d6ea;
  padding: 16px 24px;
  margin-top: 24px;
}

.emotion-4 {
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-4:before,
.emotion-4:after {
  content: ' ';
  display: table;
}

.emotion-4:after {
  clear: both;
}

.emotion-0 {
  line-height: 28px;
  font-weight: bold;
}

.emotion-2 {
  line-height: 20px;
  font-weight: normal;
}

.emotion-10 {
  line-height: 28px;
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-10:before,
.emotion-10:after {
  content: ' ';
  display: table;
}

.emotion-10:after {
  clear: both;
}

.emotion-6 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-6:link,
.emotion-6:visited {
  color: #0a1633;
}

.emotion-6:hover,
.emotion-6:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-12 {
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-16 {
  line-height: 1;
  padding: 0 24px;
  margin-top: 16px;
  padding-top: 12px;
}

.emotion-16:before,
.emotion-16:after {
  content: ' ';
  display: table;
}

.emotion-16:after {
  clear: both;
}

.emotion-18 {
  box-sizing: border-box;
  text-align: left;
  overflow: auto;
  background: #ffffff;
  font-size: 12px;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 4px 4px -2px rgba(0,0,0,0.05),inset 0 -2px 0px 0px #f8f8ff;
  border-radius: 4px;
}

.emotion-18 .uc-fe-card-header:last-of-type,
.emotion-18 .uc-fe-card-action:last-of-type,
.emotion-18 .uc-fe-card-content:last-of-type {
  margin-bottom: 24px;
}

.emotion-18 .uc-fe-card-header:nth-of-type(2),
.emotion-18 .uc-fe-card-action:nth-of-type(2),
.emotion-18 .uc-fe-card-content:nth-of-type(2) {
  margin-top: 24px;
}

.emotion-18 .uc-fe-card-title {
  color: #0a1633;
  font-size: 16px;
}

.emotion-18 .uc-fe-card-comment {
  color: #526075;
  font-size: 12px;
}

.emotion-18 .uc-fe-card-footer {
  border-top: 1px solid #d2d6ea;
  padding: 16px 24px;
  margin-top: 24px;
}

.emotion-4 {
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-4:before,
.emotion-4:after {
  content: ' ';
  display: table;
}

.emotion-4:after {
  clear: both;
}

.emotion-0 {
  line-height: 28px;
  font-weight: bold;
}

.emotion-2 {
  line-height: 20px;
  font-weight: normal;
}

.emotion-10 {
  line-height: 28px;
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-10:before,
.emotion-10:after {
  content: ' ';
  display: table;
}

.emotion-10:after {
  clear: both;
}

.emotion-6 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-6:link,
.emotion-6:visited {
  color: #0a1633;
}

.emotion-6:hover,
.emotion-6:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-12 {
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-16 {
  line-height: 1;
  padding: 0 24px;
  margin-top: 16px;
  padding-top: 12px;
}

.emotion-16:before,
.emotion-16:after {
  content: ' ';
  display: table;
}

.emotion-16:after {
  clear: both;
}

<div
  class="uc-fe-card emotion-18 emotion-19"
>
  <div />
  <div
    class="uc-fe-card-header emotion-4 emotion-5"
  >
    <div
      class="uc-fe-card-title emotion-0 emotion-1"
    >
      This is the title
    </div>
    <div
      class="uc-fe-card-comment emotion-2 emotion-3"
    >
      This is the comment
    </div>
  </div>
  <div
    class="uc-fe-card-action emotion-10 emotion-11"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-6 emotion-7"
      type="button"
    >
      This is a action button
    </button>
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-6 emotion-7"
      type="button"
    >
      This is a action button
    </button>
  </div>
  <div
    class="uc-fe-card-content emotion-12 emotion-13"
  >
    <div
      style="background:#e1e6f0;height:50px;padding:10px"
    >
      This is the content
    </div>
  </div>
  <div
    class="uc-fe-card-footer emotion-16 emotion-17"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-6 emotion-7"
      style="float:right"
      type="button"
    >
      This is a footer button
    </button>
  </div>
</div>
`;

exports[`Card demo -- custom 1`] = `
.emotion-18 {
  box-sizing: border-box;
  text-align: left;
  overflow: auto;
  background: #ffffff;
  font-size: 12px;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 4px 4px -2px rgba(0,0,0,0.05),inset 0 -2px 0px 0px #f8f8ff;
  border-radius: 4px;
}

.emotion-18 .uc-fe-card-header:last-of-type,
.emotion-18 .uc-fe-card-action:last-of-type,
.emotion-18 .uc-fe-card-content:last-of-type {
  margin-bottom: 24px;
}

.emotion-18 .uc-fe-card-header:nth-of-type(2),
.emotion-18 .uc-fe-card-action:nth-of-type(2),
.emotion-18 .uc-fe-card-content:nth-of-type(2) {
  margin-top: 24px;
}

.emotion-18 .uc-fe-card-title {
  color: #0a1633;
  font-size: 16px;
}

.emotion-18 .uc-fe-card-comment {
  color: #526075;
  font-size: 12px;
}

.emotion-18 .uc-fe-card-footer {
  border-top: 1px solid #d2d6ea;
  padding: 16px 24px;
  margin-top: 24px;
}

.emotion-12 {
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-12:before,
.emotion-12:after {
  content: ' ';
  display: table;
}

.emotion-12:after {
  clear: both;
}

.emotion-8 {
  line-height: 28px;
  font-weight: bold;
}

.emotion-10 {
  line-height: 20px;
  font-weight: normal;
}

.emotion-6 {
  line-height: 28px;
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-6:before,
.emotion-6:after {
  content: ' ';
  display: table;
}

.emotion-6:after {
  clear: both;
}

.emotion-2 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-2:link,
.emotion-2:visited {
  color: #0a1633;
}

.emotion-2:hover,
.emotion-2:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-0 {
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-16 {
  line-height: 1;
  padding: 0 24px;
  margin-top: 16px;
  padding-top: 12px;
}

.emotion-16:before,
.emotion-16:after {
  content: ' ';
  display: table;
}

.emotion-16:after {
  clear: both;
}

.emotion-18 {
  box-sizing: border-box;
  text-align: left;
  overflow: auto;
  background: #ffffff;
  font-size: 12px;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 4px 4px -2px rgba(0,0,0,0.05),inset 0 -2px 0px 0px #f8f8ff;
  border-radius: 4px;
}

.emotion-18 .uc-fe-card-header:last-of-type,
.emotion-18 .uc-fe-card-action:last-of-type,
.emotion-18 .uc-fe-card-content:last-of-type {
  margin-bottom: 24px;
}

.emotion-18 .uc-fe-card-header:nth-of-type(2),
.emotion-18 .uc-fe-card-action:nth-of-type(2),
.emotion-18 .uc-fe-card-content:nth-of-type(2) {
  margin-top: 24px;
}

.emotion-18 .uc-fe-card-title {
  color: #0a1633;
  font-size: 16px;
}

.emotion-18 .uc-fe-card-comment {
  color: #526075;
  font-size: 12px;
}

.emotion-18 .uc-fe-card-footer {
  border-top: 1px solid #d2d6ea;
  padding: 16px 24px;
  margin-top: 24px;
}

.emotion-12 {
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-12:before,
.emotion-12:after {
  content: ' ';
  display: table;
}

.emotion-12:after {
  clear: both;
}

.emotion-8 {
  line-height: 28px;
  font-weight: bold;
}

.emotion-10 {
  line-height: 20px;
  font-weight: normal;
}

.emotion-6 {
  line-height: 28px;
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-6:before,
.emotion-6:after {
  content: ' ';
  display: table;
}

.emotion-6:after {
  clear: both;
}

.emotion-2 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-2:link,
.emotion-2:visited {
  color: #0a1633;
}

.emotion-2:hover,
.emotion-2:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-0 {
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-16 {
  line-height: 1;
  padding: 0 24px;
  margin-top: 16px;
  padding-top: 12px;
}

.emotion-16:before,
.emotion-16:after {
  content: ' ';
  display: table;
}

.emotion-16:after {
  clear: both;
}

<div
  class="uc-fe-card emotion-18 emotion-19"
>
  <div />
  <div
    class="uc-fe-card-content emotion-0 emotion-1"
  >
    <div
      style="background:#e1e6f0;height:50px;padding:10px"
    >
      This is the content
    </div>
  </div>
  <div
    class="uc-fe-card-action emotion-6 emotion-7"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-2 emotion-3"
      type="button"
    >
      This is a action button
    </button>
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-2 emotion-3"
      type="button"
    >
      This is a action button
    </button>
  </div>
  <div
    class="uc-fe-card-header emotion-12 emotion-13"
  >
    <div
      class="uc-fe-card-title emotion-8 emotion-9"
    >
      This is the title
    </div>
    <div
      class="uc-fe-card-comment emotion-10 emotion-11"
    >
      This is the comment
    </div>
  </div>
  <div
    class="uc-fe-card-footer emotion-16 emotion-17"
  >
    <button
      class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-2 emotion-3"
      style="float:right"
      type="button"
    >
      This is a footer button
    </button>
  </div>
</div>
`;

exports[`Card demo -- popupContainer 1`] = `
.emotion-2 {
  box-sizing: border-box;
  text-align: left;
  overflow: auto;
  background: #ffffff;
  font-size: 12px;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 4px 4px -2px rgba(0,0,0,0.05),inset 0 -2px 0px 0px #f8f8ff;
  border-radius: 4px;
}

.emotion-2 .uc-fe-card-header:last-of-type,
.emotion-2 .uc-fe-card-action:last-of-type,
.emotion-2 .uc-fe-card-content:last-of-type {
  margin-bottom: 24px;
}

.emotion-2 .uc-fe-card-header:nth-of-type(2),
.emotion-2 .uc-fe-card-action:nth-of-type(2),
.emotion-2 .uc-fe-card-content:nth-of-type(2) {
  margin-top: 24px;
}

.emotion-2 .uc-fe-card-title {
  color: #0a1633;
  font-size: 16px;
}

.emotion-2 .uc-fe-card-comment {
  color: #526075;
  font-size: 12px;
}

.emotion-2 .uc-fe-card-footer {
  border-top: 1px solid #d2d6ea;
  padding: 16px 24px;
  margin-top: 24px;
}

.emotion-0 {
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-10 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
}

.emotion-8 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
  padding-right: 28px;
  width: 100%;
  text-align: left;
}

.emotion-8:link,
.emotion-8:visited {
  color: #0a1633;
}

.emotion-8:hover,
.emotion-8:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-5 {
  vertical-align: baseline;
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.emotion-20 {
  display: inline-block;
  vertical-align: middle;
}

.emotion-18 {
  position: relative;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  max-width: 100%;
  color: #526075;
  fill: currentColor;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  display: inline-block;
  vertical-align: middle;
}

.emotion-18:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-18 .uc-fe-input-clear {
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  fill: #7a8baa;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.emotion-18 .uc-fe-input-wrap,
.emotion-18 .uc-fe-input-prefix,
.emotion-18 .uc-fe-input-suffix,
.emotion-18 .uc-fe-input-clear,
.emotion-18 input {
  padding: 0 4px;
}

.emotion-18.uc-fe-input-block {
  display: block;
}

.emotion-18 .uc-fe-input-wrap {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-18 .uc-fe-input-prefix,
.emotion-18 .uc-fe-input-suffix {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-18 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1 1 130px;
  -ms-flex: 1 1 130px;
  flex: 1 1 130px;
  min-width: 0px;
}

.emotion-18 input,
.emotion-18 input:hover,
.emotion-18 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-18 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-18 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-18 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-18 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-18:hover .uc-fe-input-clear,
.emotion-18.uc-fe-input-focused .uc-fe-input-clear {
  opacity: 1;
  cursor: pointer;
}

.emotion-16 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 12px;
  height: 12px;
}

.emotion-2 {
  box-sizing: border-box;
  text-align: left;
  overflow: auto;
  background: #ffffff;
  font-size: 12px;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 4px 4px -2px rgba(0,0,0,0.05),inset 0 -2px 0px 0px #f8f8ff;
  border-radius: 4px;
}

.emotion-2 .uc-fe-card-header:last-of-type,
.emotion-2 .uc-fe-card-action:last-of-type,
.emotion-2 .uc-fe-card-content:last-of-type {
  margin-bottom: 24px;
}

.emotion-2 .uc-fe-card-header:nth-of-type(2),
.emotion-2 .uc-fe-card-action:nth-of-type(2),
.emotion-2 .uc-fe-card-content:nth-of-type(2) {
  margin-top: 24px;
}

.emotion-2 .uc-fe-card-title {
  color: #0a1633;
  font-size: 16px;
}

.emotion-2 .uc-fe-card-comment {
  color: #526075;
  font-size: 12px;
}

.emotion-2 .uc-fe-card-footer {
  border-top: 1px solid #d2d6ea;
  padding: 16px 24px;
  margin-top: 24px;
}

.emotion-0 {
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-10 {
  box-sizing: border-box;
  position: relative;
  display: inline-block;
  vertical-align: middle;
  font-size: 12px;
  color: #0a1633;
}

.emotion-8 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
  padding-right: 28px;
  width: 100%;
  text-align: left;
}

.emotion-8:link,
.emotion-8:visited {
  color: #0a1633;
}

.emotion-8:hover,
.emotion-8:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-5 {
  vertical-align: baseline;
  position: absolute;
  right: 8px;
  top: 50%;
  margin-top: -6px;
}

.emotion-20 {
  display: inline-block;
  vertical-align: middle;
}

.emotion-18 {
  position: relative;
  box-sizing: border-box;
  font-size: 12px;
  border-radius: 2px;
  height: 28px;
  max-width: 100%;
  color: #526075;
  fill: currentColor;
  border: 1px solid #c3cad9;
  box-shadow: inset 0 3px 0 0 rgba(0,0,0,0.05);
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
  display: inline-block;
  vertical-align: middle;
}

.emotion-18:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-18 .uc-fe-input-clear {
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  fill: #7a8baa;
  opacity: 0;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
}

.emotion-18 .uc-fe-input-wrap,
.emotion-18 .uc-fe-input-prefix,
.emotion-18 .uc-fe-input-suffix,
.emotion-18 .uc-fe-input-clear,
.emotion-18 input {
  padding: 0 4px;
}

.emotion-18.uc-fe-input-block {
  display: block;
}

.emotion-18 .uc-fe-input-wrap {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-18 .uc-fe-input-prefix,
.emotion-18 .uc-fe-input-suffix {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-18 input {
  box-sizing: border-box;
  height: 100%;
  margin: 0;
  font-size: inherit;
  color: inherit;
  -webkit-flex: 1 1 130px;
  -ms-flex: 1 1 130px;
  flex: 1 1 130px;
  min-width: 0px;
}

.emotion-18 input,
.emotion-18 input:hover,
.emotion-18 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-18 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-18 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-18 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-18 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-18:hover .uc-fe-input-clear,
.emotion-18.uc-fe-input-focused .uc-fe-input-clear {
  opacity: 1;
  cursor: pointer;
}

.emotion-16 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 12px;
  height: 12px;
}

<div>
  <h3>
    Card 提供了内置的 getPopupContainer
  </h3>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-card emotion-2 emotion-3"
    >
      <div />
      <div
        class="uc-fe-card-content emotion-0 emotion-1"
      >
        <div
          style="position:relative"
        >
          <div
            style="background:#e1e6f0;height:50px;padding:10px"
          >
            This is the content
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-card emotion-2 emotion-3"
    >
      <div />
      <div
        class="uc-fe-card-content emotion-0 emotion-1"
      >
        <div
          style="position:relative"
        >
          <div
            class=" emotion-10 emotion-11"
          >
            <div>
              <button
                class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-7 emotion-8 emotion-9"
                type="button"
              >
                <div>
                  请选择
                </div>
                <i
                  class="uc-fe-icon icon__down emotion-4 emotion-5 emotion-6"
                />
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-card emotion-2 emotion-3"
    >
      <div />
      <div
        class="uc-fe-card-content emotion-0 emotion-1"
      >
        <div
          style="position:relative"
        >
          <div
            class="uc-fe-datepicker emotion-20 emotion-21"
          >
            <span
              class="uc-fe-input emotion-18 emotion-19"
            >
              <span
                class="uc-fe-input-wrap"
              >
                <span
                  class="uc-fe-input-prefix"
                >
                  <svg
                    class=" emotion-16 emotion-17"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16.5454546,2.28070719 C17.0475,2.28070719 17.4545455,2.68581433 17.4545455,3.1854691 L19.2727272,3.1854691 C20.7795455,3.1854691 22,4.40011196 22,5.89975481 L22,18.5664215 C22,20.0660644 20.7795455,21.2807072 19.2727272,21.2807072 L4.72727273,21.2807072 C3.22045454,21.2807072 2,20.0660644 2,18.5664215 L2,5.89975481 C2,4.40011196 3.22045454,3.1854691 4.72727273,3.1854691 L6.54545456,3.1854691 C6.54545456,2.68581433 6.95250001,2.28070719 7.45454547,2.28070719 C7.95659093,2.28070719 8.36363638,2.68581433 8.36363638,3.1854691 L15.6363637,3.1854691 C15.6363637,2.68581433 16.0434091,2.28070719 16.5454546,2.28070719 Z M20.1818183,9.51880243 L3.81818182,9.51880243 L3.81818182,18.5664215 C3.81818182,19.0663024 4.225,19.4711833 4.72727273,19.4711833 L19.2727272,19.4711833 C19.7750001,19.4711833 20.1818183,19.0663024 20.1818183,18.5664215 L20.1818183,9.51880243 Z M6.54545456,14.9473739 C7.04753159,14.9473739 7.45454547,15.3524496 7.45454547,15.8521358 C7.45454547,16.351822 7.04753159,16.7568977 6.54545456,16.7568977 C6.0433775,16.7568977 5.63636365,16.351822 5.63636365,15.8521358 C5.63636365,15.3524496 6.0433775,14.9473739 6.54545456,14.9473739 Z M10.1818182,14.9473739 C10.6838953,14.9473739 11.0909091,15.3524496 11.0909091,15.8521358 C11.0909091,16.351822 10.6838953,16.7568977 10.1818182,16.7568977 C9.67974115,16.7568977 9.27272729,16.351822 9.27272729,15.8521358 C9.27272729,15.3524496 9.67974115,14.9473739 10.1818182,14.9473739 Z M13.8181818,14.9473739 C14.3202589,14.9473739 14.7272728,15.3524496 14.7272728,15.8521358 C14.7272728,16.351822 14.3202589,16.7568977 13.8181818,16.7568977 C13.3161048,16.7568977 12.9090909,16.351822 12.9090909,15.8521358 C12.9090909,15.3524496 13.3161048,14.9473739 13.8181818,14.9473739 Z M17.4545455,14.9473739 C17.9566226,14.9473739 18.3636364,15.3524496 18.3636364,15.8521358 C18.3636364,16.351822 17.9566226,16.7568977 17.4545455,16.7568977 C16.9524685,16.7568977 16.5454546,16.351822 16.5454546,15.8521358 C16.5454546,15.3524496 16.9524685,14.9473739 17.4545455,14.9473739 Z M6.54545456,11.7807072 C7.04753159,11.7807072 7.45454547,12.1857829 7.45454547,12.6854691 C7.45454547,13.1851553 7.04753159,13.590231 6.54545456,13.590231 C6.0433775,13.590231 5.63636365,13.1851553 5.63636365,12.6854691 C5.63636365,12.1857829 6.0433775,11.7807072 6.54545456,11.7807072 Z M10.1818182,11.7807072 C10.6838953,11.7807072 11.0909091,12.1857829 11.0909091,12.6854691 C11.0909091,13.1851553 10.6838953,13.590231 10.1818182,13.590231 C9.67974115,13.590231 9.27272729,13.1851553 9.27272729,12.6854691 C9.27272729,12.1857829 9.67974115,11.7807072 10.1818182,11.7807072 Z M13.8181818,11.7807072 C14.3202589,11.7807072 14.7272728,12.1857829 14.7272728,12.6854691 C14.7272728,13.1851553 14.3202589,13.590231 13.8181818,13.590231 C13.3161048,13.590231 12.9090909,13.1851553 12.9090909,12.6854691 C12.9090909,12.1857829 13.3161048,11.7807072 13.8181818,11.7807072 Z M17.4545455,11.7807072 C17.9566226,11.7807072 18.3636364,12.1857829 18.3636364,12.6854691 C18.3636364,13.1851553 17.9566226,13.590231 17.4545455,13.590231 C16.9524685,13.590231 16.5454546,13.1851553 16.5454546,12.6854691 C16.5454546,12.1857829 16.9524685,11.7807072 17.4545455,11.7807072 Z M4.72727273,4.99499291 C4.225,4.99499291 3.81818182,5.39987385 3.81818182,5.89975481 L3.81818182,7.70927862 L20.1818183,7.70927862 L20.1818183,5.89975481 C20.1818183,5.39987385 19.7750001,4.99499291 19.2727272,4.99499291 L17.4545455,4.99499291 C17.4545455,5.49464767 17.0475,5.89975481 16.5454546,5.89975481 C16.0434091,5.89975481 15.6363637,5.49464767 15.6363637,4.99499291 L8.36363638,4.99499291 C8.36363638,5.49464767 7.95659093,5.89975481 7.45454547,5.89975481 C6.95250001,5.89975481 6.54545456,5.49464767 6.54545456,4.99499291 L4.72727273,4.99499291 Z"
                    />
                  </svg>
                </span>
                <input
                  placeholder="选择日期"
                  value="2018-07-21 19:55:21"
                />
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-card emotion-2 emotion-3"
    >
      <div />
      <div
        class="uc-fe-card-content emotion-0 emotion-1"
      >
        <div
          style="position:relative"
        >
          <div
            class="uc-fe-datepicker uc-fe-datepicker-month emotion-20 emotion-21"
          >
            <span
              class="uc-fe-input emotion-18 emotion-19"
            >
              <span
                class="uc-fe-input-wrap"
              >
                <span
                  class="uc-fe-input-prefix"
                >
                  <svg
                    class=" emotion-16 emotion-17"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16.5454546,2.28070719 C17.0475,2.28070719 17.4545455,2.68581433 17.4545455,3.1854691 L19.2727272,3.1854691 C20.7795455,3.1854691 22,4.40011196 22,5.89975481 L22,18.5664215 C22,20.0660644 20.7795455,21.2807072 19.2727272,21.2807072 L4.72727273,21.2807072 C3.22045454,21.2807072 2,20.0660644 2,18.5664215 L2,5.89975481 C2,4.40011196 3.22045454,3.1854691 4.72727273,3.1854691 L6.54545456,3.1854691 C6.54545456,2.68581433 6.95250001,2.28070719 7.45454547,2.28070719 C7.95659093,2.28070719 8.36363638,2.68581433 8.36363638,3.1854691 L15.6363637,3.1854691 C15.6363637,2.68581433 16.0434091,2.28070719 16.5454546,2.28070719 Z M20.1818183,9.51880243 L3.81818182,9.51880243 L3.81818182,18.5664215 C3.81818182,19.0663024 4.225,19.4711833 4.72727273,19.4711833 L19.2727272,19.4711833 C19.7750001,19.4711833 20.1818183,19.0663024 20.1818183,18.5664215 L20.1818183,9.51880243 Z M6.54545456,14.9473739 C7.04753159,14.9473739 7.45454547,15.3524496 7.45454547,15.8521358 C7.45454547,16.351822 7.04753159,16.7568977 6.54545456,16.7568977 C6.0433775,16.7568977 5.63636365,16.351822 5.63636365,15.8521358 C5.63636365,15.3524496 6.0433775,14.9473739 6.54545456,14.9473739 Z M10.1818182,14.9473739 C10.6838953,14.9473739 11.0909091,15.3524496 11.0909091,15.8521358 C11.0909091,16.351822 10.6838953,16.7568977 10.1818182,16.7568977 C9.67974115,16.7568977 9.27272729,16.351822 9.27272729,15.8521358 C9.27272729,15.3524496 9.67974115,14.9473739 10.1818182,14.9473739 Z M13.8181818,14.9473739 C14.3202589,14.9473739 14.7272728,15.3524496 14.7272728,15.8521358 C14.7272728,16.351822 14.3202589,16.7568977 13.8181818,16.7568977 C13.3161048,16.7568977 12.9090909,16.351822 12.9090909,15.8521358 C12.9090909,15.3524496 13.3161048,14.9473739 13.8181818,14.9473739 Z M17.4545455,14.9473739 C17.9566226,14.9473739 18.3636364,15.3524496 18.3636364,15.8521358 C18.3636364,16.351822 17.9566226,16.7568977 17.4545455,16.7568977 C16.9524685,16.7568977 16.5454546,16.351822 16.5454546,15.8521358 C16.5454546,15.3524496 16.9524685,14.9473739 17.4545455,14.9473739 Z M6.54545456,11.7807072 C7.04753159,11.7807072 7.45454547,12.1857829 7.45454547,12.6854691 C7.45454547,13.1851553 7.04753159,13.590231 6.54545456,13.590231 C6.0433775,13.590231 5.63636365,13.1851553 5.63636365,12.6854691 C5.63636365,12.1857829 6.0433775,11.7807072 6.54545456,11.7807072 Z M10.1818182,11.7807072 C10.6838953,11.7807072 11.0909091,12.1857829 11.0909091,12.6854691 C11.0909091,13.1851553 10.6838953,13.590231 10.1818182,13.590231 C9.67974115,13.590231 9.27272729,13.1851553 9.27272729,12.6854691 C9.27272729,12.1857829 9.67974115,11.7807072 10.1818182,11.7807072 Z M13.8181818,11.7807072 C14.3202589,11.7807072 14.7272728,12.1857829 14.7272728,12.6854691 C14.7272728,13.1851553 14.3202589,13.590231 13.8181818,13.590231 C13.3161048,13.590231 12.9090909,13.1851553 12.9090909,12.6854691 C12.9090909,12.1857829 13.3161048,11.7807072 13.8181818,11.7807072 Z M17.4545455,11.7807072 C17.9566226,11.7807072 18.3636364,12.1857829 18.3636364,12.6854691 C18.3636364,13.1851553 17.9566226,13.590231 17.4545455,13.590231 C16.9524685,13.590231 16.5454546,13.1851553 16.5454546,12.6854691 C16.5454546,12.1857829 16.9524685,11.7807072 17.4545455,11.7807072 Z M4.72727273,4.99499291 C4.225,4.99499291 3.81818182,5.39987385 3.81818182,5.89975481 L3.81818182,7.70927862 L20.1818183,7.70927862 L20.1818183,5.89975481 C20.1818183,5.39987385 19.7750001,4.99499291 19.2727272,4.99499291 L17.4545455,4.99499291 C17.4545455,5.49464767 17.0475,5.89975481 16.5454546,5.89975481 C16.0434091,5.89975481 15.6363637,5.49464767 15.6363637,4.99499291 L8.36363638,4.99499291 C8.36363638,5.49464767 7.95659093,5.89975481 7.45454547,5.89975481 C6.95250001,5.89975481 6.54545456,5.49464767 6.54545456,4.99499291 L4.72727273,4.99499291 Z"
                    />
                  </svg>
                </span>
                <input
                  placeholder="选择日期"
                  value="2018-07"
                />
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Card demo -- single 1`] = `
.emotion-2 {
  box-sizing: border-box;
  text-align: left;
  overflow: auto;
  background: #ffffff;
  font-size: 12px;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 4px 4px -2px rgba(0,0,0,0.05),inset 0 -2px 0px 0px #f8f8ff;
  border-radius: 4px;
}

.emotion-2 .uc-fe-card-header:last-of-type,
.emotion-2 .uc-fe-card-action:last-of-type,
.emotion-2 .uc-fe-card-content:last-of-type {
  margin-bottom: 24px;
}

.emotion-2 .uc-fe-card-header:nth-of-type(2),
.emotion-2 .uc-fe-card-action:nth-of-type(2),
.emotion-2 .uc-fe-card-content:nth-of-type(2) {
  margin-top: 24px;
}

.emotion-2 .uc-fe-card-title {
  color: #0a1633;
  font-size: 16px;
}

.emotion-2 .uc-fe-card-comment {
  color: #526075;
  font-size: 12px;
}

.emotion-2 .uc-fe-card-footer {
  border-top: 1px solid #d2d6ea;
  padding: 16px 24px;
  margin-top: 24px;
}

.emotion-8 {
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-8:before,
.emotion-8:after {
  content: ' ';
  display: table;
}

.emotion-8:after {
  clear: both;
}

.emotion-4 {
  line-height: 28px;
  font-weight: bold;
}

.emotion-6 {
  line-height: 20px;
  font-weight: normal;
}

.emotion-14 {
  line-height: 28px;
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-14:before,
.emotion-14:after {
  content: ' ';
  display: table;
}

.emotion-14:after {
  clear: both;
}

.emotion-10 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-10:link,
.emotion-10:visited {
  color: #0a1633;
}

.emotion-10:hover,
.emotion-10:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-0 {
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-2 {
  box-sizing: border-box;
  text-align: left;
  overflow: auto;
  background: #ffffff;
  font-size: 12px;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 4px 4px -2px rgba(0,0,0,0.05),inset 0 -2px 0px 0px #f8f8ff;
  border-radius: 4px;
}

.emotion-2 .uc-fe-card-header:last-of-type,
.emotion-2 .uc-fe-card-action:last-of-type,
.emotion-2 .uc-fe-card-content:last-of-type {
  margin-bottom: 24px;
}

.emotion-2 .uc-fe-card-header:nth-of-type(2),
.emotion-2 .uc-fe-card-action:nth-of-type(2),
.emotion-2 .uc-fe-card-content:nth-of-type(2) {
  margin-top: 24px;
}

.emotion-2 .uc-fe-card-title {
  color: #0a1633;
  font-size: 16px;
}

.emotion-2 .uc-fe-card-comment {
  color: #526075;
  font-size: 12px;
}

.emotion-2 .uc-fe-card-footer {
  border-top: 1px solid #d2d6ea;
  padding: 16px 24px;
  margin-top: 24px;
}

.emotion-8 {
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-8:before,
.emotion-8:after {
  content: ' ';
  display: table;
}

.emotion-8:after {
  clear: both;
}

.emotion-4 {
  line-height: 28px;
  font-weight: bold;
}

.emotion-6 {
  line-height: 20px;
  font-weight: normal;
}

.emotion-14 {
  line-height: 28px;
  padding: 0 24px;
  margin-top: 16px;
}

.emotion-14:before,
.emotion-14:after {
  content: ' ';
  display: table;
}

.emotion-14:after {
  clear: both;
}

.emotion-10 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  line-height: 28px;
  padding: 0 8px;
  color: #0a1633;
  fill: #0a1633;
  background: #ffffff;
  border: 1px solid #c3cad9;
  box-shadow: 0 2px 3px 0 rgba(0,0,0,0.12),inset 0 -2px 0 0 #e3e9ff;
  -webkit-transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  transition: width,height,border,background,color,fill,box-shadow .16s ease-out;
  border-width: 1px;
  border-style: solid;
  padding: 0 7px;
  line-height: 26px;
}

.emotion-10:link,
.emotion-10:visited {
  color: #0a1633;
}

.emotion-10:hover,
.emotion-10:active {
  color: #3860f4;
  fill: #3860f4;
  border: 1px solid #d2d6ea;
  background: #ffffff;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05),inset 0 -2px 0 0 #e3e9ff;
}

.emotion-0 {
  padding: 0 24px;
  margin-top: 16px;
}

<div>
  <div
    class="uc-fe-card emotion-2 emotion-3"
  >
    <div />
    <div
      class="uc-fe-card-content emotion-0 emotion-1"
    >
      <div
        style="background:#e1e6f0;height:50px;padding:10px"
      >
        This is the content
      </div>
    </div>
  </div>
  <div
    class="uc-fe-card emotion-2 emotion-3"
    style="margin-top:12px"
  >
    <div />
    <div
      class="uc-fe-card-header emotion-8 emotion-9"
    >
      <div
        class="uc-fe-card-title emotion-4 emotion-5"
      >
        This is the title
      </div>
      <div
        class="uc-fe-card-comment emotion-6 emotion-7"
      >
        This is the comment
      </div>
    </div>
    <div
      class="uc-fe-card-action emotion-14 emotion-15"
    >
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-10 emotion-11"
        type="button"
      >
        This is a action button
      </button>
      <button
        class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-border emotion-10 emotion-11"
        type="button"
      >
        This is a action button
      </button>
    </div>
  </div>
  <div
    class="uc-fe-card emotion-2 emotion-3"
    style="margin-top:12px"
  >
    <div />
    <div
      style="background:#e1e6f0;height:50px;padding:10px"
    >
      卡片本身无间距
    </div>
  </div>
</div>
`;
